k8s/front/front-k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app
spec:
  selector:
    app: test-deploy-app
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  selector:
    matchLabels:
      app: test-deploy-app
  template:
    metadata:
      labels:
        app: test-deploy-app
    spec:
      containers:
      - name: myapp
        image: twdd.icp.skt.com:8500/istio-test/istio-front:0.0.1
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "1G"
            cpu: "2"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
