k8s/front/front.yml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: front
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: front
        version: v1
    spec:
      containers:
        - name: front
          image: twdd.icp.skt.com:8500/istio-test/istio-front:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
